commit: cambio imagenes

--- a/Registro.html
+++ b/Registro.html
@@ -63,8 +63,12 @@
                 <input type="checkbox">
                 <label><a href="#">Acepto los terminos de uso</a></label>
             </div>
-            <button class="boton" type="submit">Registrarse</button>
-                <p>¿Ya tienes cuenta?, <a href="#">Iniciar sesión</a></p>
+
+            <!--<button class="boton" type="submit">Registrarse</button>--> 
+            <a href="index.html" class="boton">Registrarse</a>
+
+            <p>¿Ya tienes cuenta?, <a href="#" class="iniciar__sesion">Iniciar sesión</a></p>
+
         </section>
     </div>
 </div>
