--- a/destinos.html
+++ b/destinos.html
@@ -51,7 +51,7 @@
         <li><img src="assets/Destinos/Bogota.jpg" alt="">
             <div class="texto__destinos">
                 <h2>Bogotá</h2>
-                <p>Cononoce mas acerca de este destino</p>
+                <p>Descubre más acerca de este destino</p>
                 <a href="#" class="boton__destinos">Saber mas</a>
             </div>
         </li>
@@ -59,7 +59,7 @@
         <li><img src="assets/Destinos/Medellin.jpg" alt="">
             <div class="texto__destinos">
                 <h2>Medellin</h2>
-                <p>Cononoce mas acerca de este destino</p>
+                <p>Descubre más acerca de este destino</p>
                 <a href="#" class="boton__destinos">Saber mas</a>
             </div>
         </li>
@@ -67,7 +67,7 @@
         <li><img src="assets/Destinos/Cali.jpg" alt="">
             <div class="texto__destinos">
                 <h2>Cali</h2>
-                <p>Cononoce mas acerca de este destino</p>
+                <p>Descubre más acerca de este destino</p>
                  <a href="#" class="boton__destinos">Saber mas</a>
             </div>
         </li>
@@ -75,7 +75,7 @@
         <li><img src="assets/Destinos/Armenia.png" alt="">
             <div class="texto__destinos">
                 <h2>Armenia</h2>
-                <p>Cononoce mas acerca de este destino</p>
+                <p>Descubre más acerca de este destino</p>
                  <a href="#" class="boton__destinos">Saber mas</a>
             </div>
         </li>
@@ -83,15 +83,15 @@
         <li><img src="assets/Destinos/Buga.jpg" alt="">
             <div class="texto__destinos">
                 <h2>Buga</h2>
-                <p>Cononoce mas acerca de este destino</p>
+                <p>Descubre más acerca de este destino</p>
                  <a href="#" class="boton__destinos">Saber mas</a>
             </div>
         </li>
 
-        <li><img src="assets/Destinos/Tulua.jpeg" alt="">
+        <li><img src="assets/Destinos/Tulua.jpg" alt="">
             <div class="texto__destinos">
                 <h2>Tulua</h2>
-                <p>Cononoce mas acerca de este destino</p>
+                <p>Descubre más acerca de este destino</p>
                  <a href="#" class="boton__destinos">Saber mas</a>
             </div>
         </li>
