--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container container__inicio__sesion">
             <img src="assets/usuario.png" alt="icono usuario" class="inicio__sesion__icono">
             
-            <a href="#" class="inicio__sesion__enlace">Iniciar sesión</a>
+            <a href="Registro.html" class="inicio__sesion__enlace">Iniciar sesión</a>
         </div>
     </section>
     <header class="header">
@@ -24,7 +24,7 @@
                 <nav class="menu__navegacion">
                     <ul class="menu__ul">
                         <li class="menu__li"><a href="#">Inicio</a></li>
-                        <li class="menu__li"><a href="#">Destinos</a></li>
+                        <li class="menu__li"><a href="destinos.html">Destinos</a></li>
                         <li class="menu__li"><a href="envios.html">Envíos</a></li>
                         <li class="menu__li"><a href="#">Tiquetes</a></li>
                         <li class="menu__li"><a href="#">Transparencia</a></li>
