commit:"cel index"

--- a/envios.html
+++ b/envios.html
@@ -25,7 +25,7 @@
                 <nav class="menu__navegacion">
                     <ul class="menu__ul">
                         <li class="menu__li"><a href="index.html">Inicio</a></li>
-                        <li class="menu__li"><a href="#">Destinos</a></li>
+                        <li class="menu__li"><a href="destinos.html">Destinos</a></li>
                         <li class="menu__li"><a href="envios.html">Envíos</a></li>
                         <li class="menu__li"><a href="#">Tiquetes</a></li>
                         <li class="menu__li"><a href="#">Transparencia</a></li>
@@ -34,6 +34,10 @@
                         </li>
                     </ul>
                 </nav>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 icono__hamburguesa">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
+                </svg>
+
             </section>  
         </div>
     </header>
@@ -97,5 +101,6 @@
         <p>© 2021 - 2025 Terminal de Transporte de Buenaventura. Todos los derechos reservados.<br>
             Camilo Andrés Téllez Benítez - Brayan Camilo Vargas Perdomo - Camila Andrea Montaño Gamboa (SENA, ADSO)</p>
     </section> 
+    <script src="script/script.js"></script>
 </body>
 </html>
