--- a/destinos.html
+++ b/destinos.html
@@ -21,20 +21,25 @@
     </div>
 </section>
 <header class="header">
-   
     <div class="container__header">
         <section class="menu">
             <img src="assets/logo_terminal.png" alt="logo de la terminal de transportes" class="menu__img">
             <nav class="menu__navegacion">
                 <ul class="menu__ul">
                     <li class="menu__li"><a href="index.html">Inicio</a></li>
-                    <li class="menu__li"><a href="#">Destinos</a></li>
+                    <li class="menu__li"><a href="destinos.html">Destinos</a></li>
                     <li class="menu__li"><a href="envios.html">Envíos</a></li>
                     <li class="menu__li"><a href="#">Tiquetes</a></li>
                     <li class="menu__li"><a href="#">Transparencia</a></li>
-                    <li class="menu__li"><img src="assets/lupa.png" alt="buscar" class="menu__li__search"></li>
+                    <li class="menu__li">
+                        <img src="assets/lupa.png" alt="buscar" class="menu__li__search">
+                    </li>
                 </ul>
             </nav>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 icono__hamburguesa">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
+            </svg>
+
         </section>  
     </div>
 </header>
@@ -123,7 +128,7 @@
         Camilo Andrés Téllez Benítez - Brayan Camilo Vargas Perdomo - Camila Andrea Montaño Gamboa (SENA, ADSO)</p>
 </section> 
 
-
+<script src="script/script.js"></script>
 
 </body>
 </html>
