commit:"vincular páginas"

--- a/transparencia (1).html
+++ b/transparencia (1).html
@@ -27,7 +27,7 @@
                         <li class="menu__li"><a href="index.html">Inicio</a></li>
                         <li class="menu__li"><a href="destinos.html">Destinos</a></li>
                         <li class="menu__li"><a href="envios.html">Envíos</a></li>
-                        <li class="menu__li"><a href="#">Tiquetes</a></li>
+                        <li class="menu__li"><a href="transparencia (1).html">Tiquetes</a></li>
                         <li class="menu__li"><a href="transparencia.html">Transparencia</a></li>
                         <li class="menu__li">
                             <img src="assets/lupa.png" alt="buscar" class="menu__li__search">
