--- a/destinos.html
+++ b/destinos.html
@@ -30,7 +30,7 @@
                     <li class="menu__li"><a href="destinos.html">Destinos</a></li>
                     <li class="menu__li"><a href="envios.html">Envíos</a></li>
                     <li class="menu__li"><a href="#">Tiquetes</a></li>
-                    <li class="menu__li"><a href="#">Transparencia</a></li>
+                    <li class="menu__li"><a href="transparencia (1).html">Transparencia</a></li>
                     <li class="menu__li">
                         <img src="assets/lupa.png" alt="buscar" class="menu__li__search">
                     </li>
