commit:"hover destinos"

--- a/destinos.html
+++ b/destinos.html
@@ -17,7 +17,8 @@
     <div class="container container__inicio__sesion">
         <img src="assets/usuario.png" alt="icono usuario" class="inicio__sesion__icono">
         
-        <a href="#" class="inicio__sesion__enlace">Iniciar sesión</a>
+        <a href="Registro.html" class="inicio__sesion__enlace">Iniciar sesión</a>
+        
     </div>
 </section>
 <header class="header">
